Exit or add string as name

--- a/cpp00_string_manipulation/ex01/Makefile
+++ b/cpp00_string_manipulation/ex01/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp #PhoneBook.cpp Contact.cpp Main.cpp
+SRC = main.cpp PhoneBook.cpp Contact.cpp
 
 #INCLUDE = PhoneBook.hpp Contact.hpp
 
