--- a/cpp00_string_manipulation/ex01/Makefile
+++ b/cpp00_string_manipulation/ex01/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp PhoneBook.cpp Contact.cpp
+SRC = main.cpp PhoneBook.cpp Contact.cpp PhoneBookSearch.cpp
 
 #INCLUDE = PhoneBook.hpp Contact.hpp
 
@@ -12,8 +12,8 @@ OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
 
-%.o: %.cpp
-	$(CC) $(CPPFLAGS) -c -o $@ $<
+#%.o: %.cpp
+#	$(CC) $(CPPFLAGS) -c -o $@ $<
 
 $(NAME): $(OBJ)
 	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
