--- a/cpp01_memory_allocation/ex00/Makefile
+++ b/cpp01_memory_allocation/ex00/Makefile
@@ -4,7 +4,7 @@ CC = clang++
 
 CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98
 
-SRC = Zombie.cpp newZombie.cpp randomChump.cpp main.cpp
+SRC = Zombie.cpp newZombie.cpp main.cpp #randomChump.cpp
 
 INCLUDE = Zombie.hpp
 
