Cleaned up for submitting project - added headers etc.

--- a/cpp01_memory_allocation/ex00/Makefile
+++ b/cpp01_memory_allocation/ex00/Makefile
@@ -1,8 +1,20 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/17 14:51:19 by sde-silv          #+#    #+#              #
+#    Updated: 2024/07/17 15:11:02 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = zombiezzz
 
-CC = clang++
+CC = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 # -Wuninitialized
 
 SRC = Zombie.cpp newZombie.cpp main.cpp randomChump.cpp
 
