--- a/cpp01_memory_allocation/ex01/Makefile
+++ b/cpp01_memory_allocation/ex01/Makefile
@@ -1,8 +1,20 @@
-NAME = zo
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42berlin.d      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/17 16:08:59 by sde-silv          #+#    #+#              #
+#    Updated: 2024/07/17 16:09:02 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
-CC = clang++
+NAME = horde
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 -fsanitize=address
+CC = c++
+
+CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-fsanitize=address
 
 SRC = Zombie.cpp main.cpp zombieHorde.cpp
 
