--- a/cpp01_memory_allocation/ex02/Makefile
+++ b/cpp01_memory_allocation/ex02/Makefile
@@ -1,6 +1,18 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42berlin.d      +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/17 16:26:18 by sde-silv          #+#    #+#              #
+#    Updated: 2024/07/17 16:26:21 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = brains
 
-CC = clang++
+CC = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-fsanitize=address
 
