--- a/cpp02_polymorphism_overloading_Orthodox_Canonical/ex02/Makefile
+++ b/cpp02_polymorphism_overloading_Orthodox_Canonical/ex02/Makefile
@@ -1,10 +1,22 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/30 17:53:02 by sde-silv          #+#    #+#              #
+#    Updated: 2024/07/30 22:05:49 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME	=	ex02
 
-SRC		=	main.cpp Fixed.cpp comparison_operators.cpp arithmetic_operators.cpp
+SRC		=	main.cpp Fixed.cpp
 
 OBJ		= 	$(SRC:.cpp=.o)
 
-CXX		=	clang++
+CXX		=	c++
 
 HEADER	=	Fixed.hpp	
 
@@ -12,10 +24,10 @@ CPPFLAGS=	-Wall -Wextra -Werror -g -std=c++98
 
 all: $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp Makefile $(HEADER)
 	$(CXX) $(CPPFLAGS) -c -o $@ $<
 
-$(NAME): $(OBJ) Makefile $(HEADER)
+$(NAME): $(OBJ)
 	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
