Cleaning up for eval

--- a/cpp03_inheritance/ex01/Makefile
+++ b/cpp03_inheritance/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/08/05 15:22:01 by sde-silv          #+#    #+#              #
+#    Updated: 2024/08/05 16:14:46 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = scavtrap
 
 SRC = ClapTrap.cpp ScavTrap.cpp main.cpp
@@ -6,16 +18,16 @@ HEADER = ClapTrap.hpp ScavTrap.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
-CXX = clang++
+CXX = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98
 
 all: $(NAME)
 
-%.o: %.cpp 
+%.o: %.cpp Makefile $(HEADER)
 	$(CXX) $(CPPFLAGS) -c -o $@ $<
 
-$(NAME): $(OBJ) Makefile $(HEADER)
+$(NAME): $(OBJ)
 	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
