--- a/cpp03_inheritance/ex00/Makefile
+++ b/cpp03_inheritance/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/14 16:44:41 by sde-silv          #+#    #+#              #
-#    Updated: 2024/08/01 21:13:32 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/08/08 19:31:20 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,7 @@ OBJ = $(SRC:.cpp=.o)
 
 CXX = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-Wshadow
 
 all: $(NAME)
 
