--- a/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex01/Makefile
+++ b/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/08/12 17:26:07 by sde-silv          #+#    #+#              #
+#    Updated: 2024/08/12 17:37:49 by sde-silv         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = animals
 
 SRC =  main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp\
