--- a/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
+++ b/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
@@ -6,15 +6,15 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 21:05:18 by sde-silv          #+#    #+#              #
-#    Updated: 2024/08/19 21:05:19 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/08/20 11:47:32 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = materia
 
-SRC =  main.cpp AMateria.cpp Ice.cpp Cure.cpp
+SRC =  main.cpp AMateria.cpp Ice.cpp Cure.cpp Character.cpp
 
-HEADER = AMateria.hpp Ice.hpp Cure.hpp
+HEADER = AMateria.hpp Ice.hpp Cure.hpp ICharacter.hpp Character.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
