Included the linked list in compilation and main

--- a/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
+++ b/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
@@ -6,15 +6,17 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 21:05:18 by sde-silv          #+#    #+#              #
-#    Updated: 2024/08/21 19:50:49 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/08/23 15:59:52 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = materia
 
-SRC =  main.cpp AMateria.cpp Ice.cpp Cure.cpp Character.cpp
+SRC =  main.cpp AMateria.cpp Ice.cpp Cure.cpp Character.cpp \
+		Node.cpp LinkedList.cpp
 
-HEADER = AMateria.hpp Ice.hpp Cure.hpp ICharacter.hpp Character.hpp
+HEADER = AMateria.hpp Ice.hpp Cure.hpp ICharacter.hpp Character.hpp \
+			Node.hpp LinkedList.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
