Moved orthodox canonical form prints to debug

--- a/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
+++ b/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
@@ -6,11 +6,13 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 21:05:18 by sde-silv          #+#    #+#              #
-#    Updated: 2024/08/26 15:24:09 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/08/26 22:57:07 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = materia
+
+DBGNAME = dbg_materia
 
 SRC =  main.cpp AMateria.cpp \
 		Ice.cpp Cure.cpp \
@@ -21,29 +23,45 @@ HEADER = AMateria.hpp Ice.hpp \
 			Character.hpp IMateriaSource.hpp \
 			MateriaSource.hpp
 
+DBGHEADER = $(HEADER) debug.hpp
+
 OBJ = $(SRC:.cpp=.o)
+
+DBGOBJ = $(SRC:.cpp=.dbg.o)
 
 CXX = clang++
 
 CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 -Wshadow
+
+DBGCPPFLAGS = $(CPPFLAGS) -D_DEBUG
 
 all: $(NAME)
 
 %.o: %.cpp Makefile $(HEADER)
 	$(CXX) $(CPPFLAGS) -c -o $@ $<
 
+%.dbg.o: %.cpp Makefile $(DBGHEADER)
+	$(CXX) $(DBGCPPFLAGS) -c -o $@ $<
+
 $(NAME): $(OBJ)
 	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
+$(DBGNAME): $(DBGOBJ)
+	$(CXX) $(DBGCPPFLAGS) $(DBGOBJ) -o $(DBGNAME)
+
 clean:
 	rm -rf $(OBJ)
+	rm -rf $(DBGOBJ)
 
 fclean: clean 
 	rm -rf $(NAME)
+	rm -rf $(DBGNAME)
 
 re: fclean all
+
+debug: $(DBGNAME)
 
 leaks: all
 	valgrind --leak-check=full ./$(NAME)
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re debug
