Update from school repo

--- a/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
+++ b/cpp04_subtype_polymorphism_abstract_classes_interfaces/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 21:05:18 by sde-silv          #+#    #+#              #
-#    Updated: 2024/08/27 12:53:48 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/08/27 20:20:42 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,13 +28,13 @@ OBJ = $(SRC:.cpp=.o)
 
 DBGOBJ = $(SRC:.cpp=.dbg.o)
 
-CXX = clang++
+CXX = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 -Wshadow
+CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-Wshadow
 
 DBGCPPFLAGS = $(CPPFLAGS) -D_DEBUG
 
-all: $(NAME)
+all: $(NAME) $(DBGNAME)
 
 %.o: %.cpp Makefile $(HEADER)
 	$(CXX) $(CPPFLAGS) -c -o $@ $<
@@ -58,12 +58,10 @@ fclean: clean
 
 re: fclean all
 
-debug: $(DBGNAME)
-
-leaks: all
+leaks: all 
 	valgrind --leak-check=full ./$(NAME)
 
-dbg_leaks: debug
+debug: all
 	valgrind --leak-check=full ./$(DBGNAME)
 
 .PHONY: all clean fclean re debug
