Added the specialized forms with constructors and destructors

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -2,9 +2,11 @@ NAME = bureucrat
 
 DBGNAME = dbg_bureucrat
 
-SRC =  main.cpp Bureaucrat.cpp AForm.cpp
+SRC =  main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp \
+		RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 
-HEADER = Bureaucrat.hpp AForm.hpp
+HEADER = Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp \
+			RobotomyRequestForm.hpp PresidentialPardonForm.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
