Mostly working : Todo - test edge cases, << overload, copy operators

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -3,10 +3,10 @@ NAME = bureucrat
 DBGNAME = dbg_bureucrat
 
 SRC =  main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp \
-		#RobotomyRequestForm.cpp PresidentialPardonForm.cpp
+		RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 
 HEADER = Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp \
-			#RobotomyRequestForm.hpp PresidentialPardonForm.hpp
+			RobotomyRequestForm.hpp PresidentialPardonForm.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
