Bonus: initial commit

--- a/cpp00_string_manipulation/ex02/Makefile
+++ b/cpp00_string_manipulation/ex02/Makefile
@@ -2,7 +2,7 @@ NAME = account_log
 
 CC = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -g #-std=c++98
 
 SRC = tests.cpp Account.cpp
 
