Cleaning up for eval : ex01 need more tests

--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/04 01:32:40 by sde-silv          #+#    #+#              #
-#    Updated: 2024/09/05 16:08:18 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/11/13 22:15:35 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,25 +22,25 @@ OBJ = $(SRC:.cpp=.o)
 
 DBGOBJ = $(SRC:.cpp=.dbg.o)
 
-CXX = clang++
+CXX = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-Wshadow
+CXXFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-Wshadow
 
-DBGCPPFLAGS = $(CPPFLAGS) -D_DEBUG
+DBGCXXFLAGS = $(CXXFLAGS) -D_DEBUG
 
 all: $(NAME) $(DBGNAME)
 
 %.o: %.cpp Makefile $(HEADER)
-	$(CXX) $(CPPFLAGS) -c -o $@ $<
+	$(CXX) $(CXXFLAGS) -c -o $@ $<	
 
 %.dbg.o: %.cpp Makefile $(HEADER)
-	$(CXX) $(DBGCPPFLAGS) -c -o $@ $<
+	$(CXX) $(DBGCXXFLAGS) -c -o $@ $<
 
 $(NAME): $(OBJ)
-	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 $(DBGNAME): $(DBGOBJ)
-	$(CXX) $(DBGCPPFLAGS) $(DBGOBJ) -o $(DBGNAME)
+	$(CXX) $(DBGCXXFLAGS) $(DBGOBJ) -o $(DBGNAME)
 
 clean:
 	rm -rf $(OBJ)
