Removed the -WWW errors, removed stof stod stol functions and replaced with atof atoi and atol

--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/06 01:17:00 by sde-silv          #+#    #+#              #
-#    Updated: 2024/09/12 14:51:26 by sde-silv         ###   ########.fr        #
+#    Updated: 2024/11/14 23:36:10 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,9 +22,9 @@ OBJ = $(SRC:.cpp=.o)
 
 DBGOBJ = $(SRC:.cpp=.dbg.o)
 
-CXX = clang++
+CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -g -std=c++98 -ansi -pedantic-errors #-Wshadow
+CXXFLAGS = -Wall -Wextra -Werror -g -std=c++98 #-ansi -pedantic-errors #-Wshadow
 
 DBGCPPFLAGS = $(CXXFLAGS) -D_DEBUG
 
