--- a/cpp08_templated_containers_iters_algorithms/ex00/Makefile
+++ b/cpp08_templated_containers_iters_algorithms/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: sde-silv <sde-silv@student.42berlin.de>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/13 23:17:41 by sde-silv          #+#    #+#              #
-#    Updated: 2024/09/16 20:11:29 by sde-silv         ###   ########.fr        #
+#    Updated: 2025/05/07 19:00:06 by sde-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ HEADER = easyfind.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
-CXX = clang++
+CXX = c++
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wpedantic
 
